Fix buzz button on mobile being too wide.

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -16,8 +16,8 @@
 .centered {
     width: 100%;
     max-width: 400px;
-    padding: 1em;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .participant-box {
